<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_type"
                android:textColor="@color/text_hotel_gray"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_amount"
                android:textColor="@color/text_hotel_gray"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night_amount"
                android:textColor="@color/text_hotel_gray"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_phone"
                android:textColor="@color/text_hotel_gray"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_address"
                android:textColor="@color/text_hotel_gray"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:id="@+id/ticket_roomType_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/divider_line"
                android:textColor="@color/text_dark"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/ticket_roomAmount_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/divider_line"
                android:textColor="@color/text_dark"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/ticket_nightAmount_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/divider_line"
                android:textColor="@color/text_dark"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/ticket_hotel_phone_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/divider_line"
                android:textColor="@color/text_dark"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/ticket_hotel_address_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/divider_line"
                android:textColor="@color/text_dark"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ticket_source_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textColor="@color/text_hotel_gray"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/text_light_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/searchmap_green"
            android:gravity="left"
            android:text="@string/map_btn"
            android:textColor="@color/text_dark"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/dial_green"
            android:gravity="left"
            android:text="@string/hotel_call"
            android:textColor="@color/text_dark"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>