<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CACACA"
                    android:textSize="12dp"
                    android:text="@string/group_password"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                       android:textColor="#CACACA"
                    android:textSize="12dp"
                    android:text="@string/group_valid_time"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:textColor="#CACACA"
                    android:textSize="12dp"
                    android:text="@string/group_phone"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CACACA"
                    android:textSize="12dp"
                    android:text="@string/group_address"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:orientation="vertical"
                >

            <TextView
                    android:id="@+id/ticket_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F63D3D"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    />

            <TextView
                    android:id="@+id/ticket_valid_time_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#242424"
                    android:textSize="12dp"
                    />

            <TextView
                    android:id="@+id/ticket_business_phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:textColor="#242424"
                    android:textSize="12dp"
                    />

            <TextView
                    android:id="@+id/ticket_business_address_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#242424"
                    android:textSize="12dp"
                    />

        </LinearLayout>
    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_line" >
    </LinearLayout>

    <TextView
            android:id="@+id/ticket_source_txt"
           android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textColor="@color/text_date_gray"
        android:textSize="12dp" 
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/text_light_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/groupshoping"
            android:gravity="left"
            android:text="@string/map_btn"
            android:textColor="#C77E2C"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/dial_yellow"
            android:gravity="left"
            android:text="@string/group_call"
            android:textColor="#C77E2C"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>