<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#757575"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/ticket_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#A04295"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textColor="#757575"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/ticket_room_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark"
                android:textSize="14dp"
                android:textStyle="bold"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seat"
                android:textColor="#757575"
                android:textSize="12dp"  />

            <TextView
                android:id="@+id/ticket_seat_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business_address"
            android:textColor="#757575"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/ticket_address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_line" >
    </LinearLayout>

    <TextView
        android:id="@+id/ticket_source_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textColor="@color/text_date_gray"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@color/text_light_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/plane_blue" />

        <TextView
            android:id="@+id/map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_btn"
            android:textColor="#882A79"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>